# translator

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
config/: config.yaml
scripts/: eval.py  show_dataset.py  training.py
src/translator/: __init__.py
src/translator/config/: __init__.py  config_var.py  datapath.py  datatext.py  logger.py  model.py  schemas.py  token.py
src/translator/eval/: eval.py
src/translator/model/: __init__.py  attention.py  decoder.py  encoder.py  feedforward.py  output.py  positional.py  transformer.py
src/translator/training/: __init__.py  training.py
src/translator/utils/: __init__.py  device.py  logger.py
src/translator_from_transformer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/model/: test_attention.py  test_decoder.py  test_encoder.py  test_output.py  test_positional.py
